Blog all page inline-block white space fix

--- a/wp-content/themes/mct/styles/modules/_all-blog-inline-purple-ad.scss
+++ b/wp-content/themes/mct/styles/modules/_all-blog-inline-purple-ad.scss
@@ -70,6 +70,7 @@
 		width:50%;
 		margin-bottom:5em;
 		height:auto;
+		margin-right: -4px;
 	}
 
 	@include breakpoint(1100px){
